# wordle-suggest

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: attempts
src/: attempt.rs  lib.rs  main.rs  parser.rs  weights.rs  words.rs
tests/: integration_test.rs
words/: all.txt
