[package]
name = "wordle-suggest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
eyre = "0.6.6"
nom = "7.1.0"
rand = { version = "0.8.4", features = ["alloc", "small_rng"] }

[features]
