[package]
name = "wordle-suggest"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Wordle suggestions CLI"
homepage = "https://github.com/alexgenco/wordle-suggest"
repository = "https://github.com/alexgenco/wordle-suggest"
documentation = "https://docs.rs/wordle-suggest"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.13", features = ["derive"] }
nom = { version = "7.1.0" }
rand = { version = "0.8.4", features = ["std_rng"] }

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.1"

[features]
